test/fail.err
fail.py:8: utest failure: <lambda>
  arg 0=0
  arg 1=1
  arg x='x'
  arg y='y'
  expected value: True
  returned value: False

fail.py:9: utest failure: raise_unexpected
  expected value: True
  raised exception: Exception('unexpected',)

fail.py:11: utest failure: <lambda>
  expected exception: Exception('expected',)
  returned value: True

fail.py:12: utest failure: raise_unexpected
  expected exception: Exception('expected',)
  raised exception: Exception('unexpected',)

fail.py:14: utest failure: range
  arg 0=0
  expected sequence: [0]
  returned sequence: []

fail.py:15: utest failure: <lambda>
  expected sequence: [0]
  returned value: 0
  raised exception: TypeError("'int' object is not iterable",)

fail.py:17: utest failure: 'utest_val fail test'
  expected value: True
  returned value: False

